ch(database): Database setup with Postgres setup Postgresql tooling create SQL queries for table creation setup remote db [Finishes #164596058]
